--- a/quiz/042.md
+++ b/quiz/042.md
@@ -1,25 +1,39 @@
-def verify_transactions(db_path):
-    """
-    Connects to the database, retrieves transactions, and verifies their hash signatures.
-    """
-    conn = sqlite3.connect(db_path)
-    cursor = conn.cursor()
-    
-    # Fetch transaction data (assuming a table structure with id, sender_id, receiver_id, amount, and signature)
-    cursor.execute("SELECT id, sender_id, receiver_id, amount, signature FROM transactions")
-    transactions = cursor.fetchall()
-    
-    for transaction in transactions:
-        tx_id, sender_id, receiver_id, amount, stored_signature = transaction
-        computed_signature = generate_hash((tx_id, sender_id, receiver_id, amount))
-        
-        if computed_signature == stored_signature:
-            print(f"Tx(id={tx_id}) Signature matches")
-        else:
-            print(f"Tx(id={tx_id}) Error signature")
-    
-    conn.close()
+,,py
 
-# Run the verification process
-db_path = "bitcoin_exchange.db"
-verify_transactions(db_path)
+    import sqlite3
+    import hashlib
+    
+    def verify_pbkdf2_signature(input_string, stored_signature):
+        parts = stored_signature.split("$")
+        if len(parts) != 5:
+            return False  # Invalid format
+    
+        _, algo, iterations, salt, stored_hash = parts
+    
+        computed_hash = hashlib.pbkdf2_hmac(
+            "sha256", input_string.encode(), salt.encode(), int(iterations)
+        ).hex()
+    
+        return computed_hash == stored_hash
+    
+    def verify_signatures(db_path):
+        conn = sqlite3.connect(db_path)
+        cursor = conn.cursor()
+        
+        # Update the query to use the correct column 'signature'
+        cursor.execute("SELECT id, signature FROM ledger")  # Querying the 'ledger' table and 'signature' column
+        records = cursor.fetchall()
+        
+        for record_id, stored_signature in records:
+            input_string = f"id {record_id}"  # Modify this if you need to include other fields for the signature
+            
+            if verify_pbkdf2_signature(input_string, stored_signature):
+                print(f"Signature(id={record_id}) matches")
+            else:
+                print(f"Signature(id={record_id}) Error signature")
+        
+        conn.close()
+    
+    
+    db_path = "bitcoin_exchange.db"
+    verify_signatures(db_path)
