--- a/quiz/048.md
+++ b/quiz/048.md
@@ -37,3 +37,9 @@
     library.add_book(book2)
     
     library.show_books()
+
+
+<img width="945" alt="Screenshot 2025-02-24 at 17 36 31" src="https://github.com/user-attachments/assets/f6312a52-8b4e-453d-b8e3-6ee592e2f78c" />
+
+![IMG_0649](https://github.com/user-attachments/assets/f1991082-8935-4ce9-b7c3-321433e6a0e6)
+
