--- a/quiz/047.md
+++ b/quiz/047.md
@@ -29,5 +29,10 @@
     sunday.addMeal(230, 16, 8, 16)
     sunday.addMeal(568, 38, 50, 24)
     
-    print(sunday.onTrack())  # Output: False
-    print(sunday.getProteinPercentage())  # Output: 0.24
+    print(sunday.onTrack())  
+    print(sunday.getProteinPercentage())  
+
+<img width="735" alt="Screenshot 2025-02-24 at 17 37 49" src="https://github.com/user-attachments/assets/d8b527e2-5edd-42e8-94df-93bdfa695886" />
+![IMG_0650](https://github.com/user-attachments/assets/e7e23ad5-1120-4ac0-840c-ad83b841d96e)
+
+    
