--- a/quiz/046.md
+++ b/quiz/046.md
@@ -36,11 +36,15 @@
         def isUnionMember(self) -> bool:
             return self.is_union_member
     
-    # Example Usage:
+  
     pte = PartTimeEmployee("John Doe", "New York", "Employed", 60000, 0.5, True)
-    print(pte.getName())  # John Doe
-    print(pte.getCity())  # New York
-    print(pte.getStatus())  # Employed
-    print(pte.getAnnualSalary())  # 60000
-    print(pte.getFraction())  # 0.5
-    print(pte.isUnionMember())  # True
+    print(pte.getName()) 
+    print(pte.getCity()) 
+    print(pte.getStatus()) 
+    print(pte.getAnnualSalary()) 
+    print(pte.getFraction())  
+    print(pte.isUnionMember()) 
+<img width="945" alt="Screenshot 2025-02-24 at 17 36 31" src="https://github.com/user-attachments/assets/badfa82b-e73f-4669-b517-c0b74e4692cc" />
+
+![IMG_0651](https://github.com/user-attachments/assets/9ad4e375-3bcf-468b-af32-a8a2dfe1dcc8)
+
