--- a/quiz/045.md
+++ b/quiz/045.md
@@ -31,3 +31,7 @@
     counter = WordCounter(text)
     counter.count_words()
     counter.display_counts()
+<img width="735" alt="Screenshot 2025-02-24 at 17 37 49" src="https://github.com/user-attachments/assets/69bcf5c3-819d-4e74-920c-e4db7a298256" />
+
+![IMG_0652](https://github.com/user-attachments/assets/4a1615c9-3080-43a0-b24f-db8e9a3063ce)
+
