--- a/quiz/044.md
+++ b/quiz/044.md
@@ -18,3 +18,5 @@
     print(rain.pour(28))  # Output: "Plong"
     print(rain.pour(30))  # Output: "PlingPlang"
     print(rain.pour(34))  # Output: "34"
+<img width="792" alt="Screenshot 2025-02-24 at 17 38 55" src="https://github.com/user-attachments/assets/edc97e56-7454-4ced-883c-48cac9d2cc6f" />
+![IMG_0653](https://github.com/user-attachments/assets/4387e995-33d9-4f6b-a4cd-96782e62e14f)
