--- a/quiz/043.md
+++ b/quiz/043.md
@@ -14,3 +14,6 @@
     
     pal2 = palNum(10, 199)
     print(pal2.get_pal_list())  
+
+<img width="534" alt="Screenshot 2025-02-24 at 17 39 54" src="https://github.com/user-attachments/assets/e1722607-da1d-4924-adb8-e0de7456a832" />
+![IMG_0654](https://github.com/user-attachments/assets/978b4868-be0e-43b4-b284-21c834d4510f)
