--- a/quiz/042.md
+++ b/quiz/042.md
@@ -37,3 +37,5 @@
     
     db_path = "bitcoin_exchange.db"
     verify_signatures(db_path)
+
+![IMG_0655](https://github.com/user-attachments/assets/217a30c3-2a2b-4e69-844b-4e33683715ae)
