--- a/quiz/041.md
+++ b/quiz/041.md
@@ -71,7 +71,10 @@
             id: result_label
             text: "Results will appear here"
 
+![IMG_0656](https://github.com/user-attachments/assets/ca1d2b0b-eb5f-4c50-b28f-baf7bc60835e)
 
+![IMG_0657](https://github.com/user-attachments/assets/5dbe4d6d-d963-4fb8-8a24-637cbd161739)
 
+![IMG_0658](https://github.com/user-attachments/assets/eccd7837-5ef5-462d-acc8-ca27864f037e)
 
     
