--- a/quiz/048.md
+++ b/quiz/048.md
@@ -44,3 +44,27 @@
 
 ![IMG_0649](https://github.com/user-attachments/assets/f1991082-8935-4ce9-b7c3-321433e6a0e6)
 
+
+### **Class: Book**  
+| Attribute  | Type   | Description                     |  
+|------------|--------|---------------------------------|  
+| title      | String | The title of the book          |  
+| author     | String | The author of the book         |  
+| isbn       | String | The ISBN number of the book    |  
+
+| Method         | Parameters | Return Type | Description                            |  
+|---------------|------------|-------------|----------------------------------------|  
+| display_info() | None       | None        | Prints the title, author, and ISBN    |  
+
+---
+
+### **Class: Library**  
+| Attribute  | Type    | Description                        |  
+|------------|---------|------------------------------------|  
+| books      | List<Book> | A list storing Book objects     |  
+
+| Method       | Parameters  | Return Type | Description                                     |  
+|-------------|-------------|-------------|-------------------------------------------------|  
+| add_book()  | Book object | None        | Adds a Book object to the `books` list         |  
+| show_books()| None        | None        | Displays details of all books in the library   |  
+
