--- a/quiz/045.md
+++ b/quiz/045.md
@@ -35,3 +35,23 @@
 
 ![IMG_0652](https://github.com/user-attachments/assets/4a1615c9-3080-43a0-b24f-db8e9a3063ce)
 
+---
+
+### **Class: WordCounter**  
+
+#### **Attributes**
+| Attribute    | Type   | Description                                       |  
+|-------------|--------|---------------------------------------------------|  
+| text        | String | The input text for word counting                  |  
+| word_counts | Dict   | A dictionary storing word frequencies             |  
+
+#### **Methods**
+| Method             | Parameters | Return Type | Description                                      |  
+|--------------------|------------|-------------|--------------------------------------------------|  
+| `__init__()`      | text (String) | None       | Initializes the `WordCounter` object with text  |  
+| `clean_text()`    | None       | String      | Removes punctuation and converts text to lowercase |  
+| `count_words()`   | None       | None        | Tokenizes text and counts word occurrences      |  
+| `get_word_counts()` | None    | Dict        | Returns the dictionary of word counts           |  
+| `display_counts()` | None      | None        | Prints the word frequency count                 |  
+
+
