--- a/quiz/044.md
+++ b/quiz/044.md
@@ -13,10 +13,19 @@
             
             return result if result else str(n)
     
-    # Example usage:
+ 
     rain = rainDrops()
     print(rain.pour(28))  # Output: "Plong"
     print(rain.pour(30))  # Output: "PlingPlang"
     print(rain.pour(34))  # Output: "34"
 <img width="792" alt="Screenshot 2025-02-24 at 17 38 55" src="https://github.com/user-attachments/assets/edc97e56-7454-4ced-883c-48cac9d2cc6f" />
 ![IMG_0653](https://github.com/user-attachments/assets/4387e995-33d9-4f6b-a4cd-96782e62e14f)
+
+
+
+### **Class: rainDrops**  
+
+#### **Methods**
+| Method   | Parameters       | Return Type | Description                                      |  
+|----------|-----------------|-------------|--------------------------------------------------|  
+| `pour()` | `n: int`        | `str`       | Returns "Pling" if `n` is divisible by 3, "Plang" if divisible by 5, "Plong" if divisible by 7, or `n` as a string if none apply. |  
