--- a/quiz/043.md
+++ b/quiz/043.md
@@ -8,7 +8,7 @@
         def get_pal_list(self):
             return [num for num in range(self.A, self.B + 1) if str(num) == str(num)[::-1]]
     
-    # Example usage:
+
     pal1 = palNum(1, 9)
     print(pal1.get_pal_list())  
     
@@ -17,3 +17,18 @@
 
 <img width="534" alt="Screenshot 2025-02-24 at 17 39 54" src="https://github.com/user-attachments/assets/e1722607-da1d-4924-adb8-e0de7456a832" />
 ![IMG_0654](https://github.com/user-attachments/assets/978b4868-be0e-43b4-b284-21c834d4510f)
+
+
+### **Class: palNum**  
+
+#### **Attributes**
+| Attribute | Type  | Description                                   |
+|-----------|-------|-----------------------------------------------|
+| A         | int   | The starting number of the range              |
+| B         | int   | The ending number of the range                |
+
+#### **Methods**
+| Method              | Parameters             | Return Type  | Description                                    |
+|---------------------|------------------------|--------------|------------------------------------------------|
+| `__init__()`        | A (int), B (int)        | None         | Initializes the `palNum` object with `A` and `B`|
+| `get_pal_list()`    | None                   | List[int]    | Returns a list of palindrome numbers between `A` and `B`|
