--- a/quiz/042.md
+++ b/quiz/042.md
@@ -20,12 +20,12 @@
         conn = sqlite3.connect(db_path)
         cursor = conn.cursor()
         
-        # Update the query to use the correct column 'signature'
-        cursor.execute("SELECT id, signature FROM ledger")  # Querying the 'ledger' table and 'signature' column
+    
+        cursor.execute("SELECT id, signature FROM ledger") 
         records = cursor.fetchall()
         
         for record_id, stored_signature in records:
-            input_string = f"id {record_id}"  # Modify this if you need to include other fields for the signature
+            input_string = f"id {record_id}" 
             
             if verify_pbkdf2_signature(input_string, stored_signature):
                 print(f"Signature(id={record_id}) matches")
@@ -39,3 +39,17 @@
     verify_signatures(db_path)
 
 ![IMG_0655](https://github.com/user-attachments/assets/217a30c3-2a2b-4e69-844b-4e33683715ae)
+
+### **Class: SignatureVerifier**  
+
+#### **Attributes**
+| Attribute   | Type    | Description                                        |
+|-------------|---------|----------------------------------------------------|
+| db_path     | String  | Path to the SQLite database containing the ledger  |
+
+#### **Methods**
+| Method                 | Parameters                     | Return Type  | Description                                                        |
+|------------------------|--------------------------------|--------------|--------------------------------------------------------------------|
+| `__init__()`           | db_path (String)               | None         | Initializes the `SignatureVerifier` object with the database path  |
+| `verify_pbkdf2_signature()` | input_string (String), stored_signature (String) | bool        | Verifies the PBKDF2 signature by comparing the computed and stored hashes |
+| `verify_signatures()`  | None                           | None         | Fetches records from the database, verifies each signature, and prints the results |
