--- a/quiz/041.md
+++ b/quiz/041.md
@@ -77,4 +77,72 @@
 
 ![IMG_0658](https://github.com/user-attachments/assets/eccd7837-5ef5-462d-acc8-ca27864f037e)
 
-    
+---
+
+### **Class: FraudChecker**  
+
+#### **Attributes**
+| Attribute   | Type     | Description                                              |
+|-------------|----------|----------------------------------------------------------|
+| db_path     | String   | Path to the SQLite database where transactions are stored |
+
+#### **Methods**
+| Method                  | Parameters                             | Return Type | Description                                                         |
+|-------------------------|----------------------------------------|-------------|---------------------------------------------------------------------|
+| `__init__()`            | db_path (String)                       | None        | Initializes the `FraudChecker` object with the database path        |
+| `calculate_hash()`      | transaction_id (String), amount (Float), timestamp (String), secret_key (String) | String      | Recalculates the hash for a transaction based on its attributes     |
+| `check_fraud()`         | None                                   | List[int]   | Checks for fraudulent transactions by verifying stored hashes      |
+
+---
+
+### **Class: FraudApp**  
+
+#### **Attributes**
+| Attribute   | Type     | Description                                              |
+|-------------|----------|----------------------------------------------------------|
+| None        | None     | Inherits from `App` class for Kivy application management |
+
+#### **Methods**
+| Method                  | Parameters                             | Return Type | Description                                                         |
+|-------------------------|----------------------------------------|-------------|---------------------------------------------------------------------|
+| `build()`               | None                                   | Widget      | Builds the application interface (returns `FraudScreen`)            |
+| `run_fraud_check()`     | None                                   | None        | Executes the fraud check and updates the UI with results            |
+
+---
+
+### **Class: FraudScreen**  
+
+#### **Attributes**
+| Attribute   | Type     | Description                                              |
+|-------------|----------|----------------------------------------------------------|
+| None        | None     | Inherits from `BoxLayout` for the layout of the screen   |
+
+#### **Methods**
+| Method    | Parameters | Return Type | Description                                    |
+|-----------|------------|-------------|------------------------------------------------|
+| None      | None       | None        | Inherits UI behavior from `BoxLayout`          |
+
+---
+
+### **Class: BoxLayout (Inherited by FraudScreen)**  
+
+#### **Attributes**
+| Attribute   | Type     | Description                                              |
+|-------------|----------|----------------------------------------------------------|
+| orientation | String   | Defines the orientation of the layout (vertical here)    |
+
+#### **Methods**
+| Method      | Parameters | Return Type | Description                                    |
+|-------------|------------|-------------|------------------------------------------------|
+| None        | None       | None        | Inherits UI behavior from `Widget` class       |
+
+---
+
+### **UI Structure (Defined in Kivy Language)**
+
+| Element       | Type      | Description                                              |
+|---------------|-----------|----------------------------------------------------------|
+| `Label`       | Widget    | Displays static text like "Fraud Detection System"       |
+| `Button`      | Widget    | A button labeled "Check for Fraud", triggering the check |
+| `Label`       | Widget    | A label that displays the result of fraud detection      |
+
