--- a/quiz/047.md
+++ b/quiz/047.md
@@ -36,4 +36,27 @@
 
 ![IMG_0650](https://github.com/user-attachments/assets/e7e23ad5-1120-4ac0-840c-ad83b841d96e)
 
-    
+
+
+---
+
+### **Class: CalorieCount**  
+
+#### **Attributes**
+| Attribute        | Type   | Description                                               |
+|------------------|--------|-----------------------------------------------------------|
+| `daily_limit`    | int    | The daily calorie intake limit                             |
+| `daily_intake`   | int    | The total calorie intake for the day                       |
+| `protein`        | int    | The total amount of protein consumed                       |
+| `carbs`          | int    | The total amount of carbohydrates consumed                 |
+| `fat`            | int    | The total amount of fat consumed                           |
+
+#### **Methods**
+| Method                | Parameters                        | Return Type  | Description                                                       |
+|-----------------------|-----------------------------------|--------------|-------------------------------------------------------------------|
+| `__init__()`          | daily_limit (int)                 | None         | Initializes the `CalorieCount` object with a daily calorie limit |
+| `addMeal()`           | cal (int), pro (int), car (int), fat (int) | None     | Adds a meal's calorie, protein, carbs, and fat values to totals  |
+| `getProteinPercentage()` | None                            | float        | Calculates and returns the percentage of protein in the diet     |
+| `onTrack()`           | None                              | bool         | Checks if the daily intake is within the calorie limit            |
+
+---
