--- a/quiz/046.md
+++ b/quiz/046.md
@@ -48,3 +48,56 @@
 
 ![IMG_0651](https://github.com/user-attachments/assets/9ad4e375-3bcf-468b-af32-a8a2dfe1dcc8)
 
+
+---
+
+### **Class: Citizen**  
+
+#### **Attributes**
+| Attribute  | Type   | Description                                      |
+|------------|--------|--------------------------------------------------|
+| `name`     | str    | The name of the citizen                          |
+| `city`     | str    | The city where the citizen resides               |
+| `status`   | str    | The employment or citizenship status of the citizen |
+
+#### **Methods**
+| Method           | Parameters                     | Return Type | Description                                     |
+|------------------|--------------------------------|-------------|-------------------------------------------------|
+| `__init__()`     | name (str), city (str), status (str) | None        | Initializes the `Citizen` object with name, city, and status |
+| `getName()`      | None                           | str         | Returns the name of the citizen                |
+| `getCity()`      | None                           | str         | Returns the city of the citizen                |
+| `getStatus()`    | None                           | str         | Returns the status of the citizen              |
+
+---
+
+### **Class: Employee (Inherits from Citizen)**  
+
+#### **Attributes**
+| Attribute      | Type   | Description                                     |
+|----------------|--------|-------------------------------------------------|
+| `annual_salary` | float  | The annual salary of the employee               |
+
+#### **Methods**
+| Method            | Parameters                      | Return Type | Description                                      |
+|-------------------|---------------------------------|-------------|--------------------------------------------------|
+| `__init__()`      | name (str), city (str), status (str), annual_salary (float) | None        | Initializes the `Employee` object with name, city, status, and annual salary |
+| `getAnnualSalary()`| None                           | float       | Returns the annual salary of the employee        |
+
+---
+
+### **Class: PartTimeEmployee (Inherits from Employee)**  
+
+#### **Attributes**
+| Attribute        | Type    | Description                                      |
+|------------------|---------|--------------------------------------------------|
+| `fraction`       | float   | The fraction of full-time work for the part-time employee |
+| `is_union_member` | bool   | Indicates if the part-time employee is a union member |
+
+#### **Methods**
+| Method                | Parameters                     | Return Type | Description                                      |
+|-----------------------|--------------------------------|-------------|--------------------------------------------------|
+| `__init__()`          | name (str), city (str), status (str), annual_salary (float), fraction (float), is_union_member (bool) | None        | Initializes the `PartTimeEmployee` object with name, city, status, annual salary, fraction of work, and union membership |
+| `getFraction()`       | None                           | float       | Returns the fraction of full-time work for the part-time employee |
+| `isUnionMember()`     | None                           | bool        | Returns whether the part-time employee is a union member |
+
+---
